--- a/css/styleslog.css
+++ b/css/styleslog.css
@@ -25,9 +25,12 @@ body {
 
 .login-container {
 	padding: 5%;
-	border: 1px solid #ccc;
+	border: 1px solid rgba(255, 255, 255, 0.18);
 	border-radius: 20px;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: linear-gradient(135deg,rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0));
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
+	box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
 }
 
 h3 {
@@ -63,7 +66,7 @@ p {
 }
 
 a {
-	color: #007bff;
+	color: #75b5fb;
 	text-decoration: none;
 }
 
@@ -77,21 +80,7 @@ a:hover {
 		max-width: 60%;
 	}
 	.login-container {
-		max-width: 80%;
-	}
-	input,
-	.login-btn {
-		width: 100%; /* Adjusted input and button width */
-	}
-}
-
-/* Media Query for smaller screens */
-@media only screen and (max-width: 600px) {
-	.logo img {
-		max-width: 60%;
-	}
-	.login-container {
-		max-width: 80%;
+		max-width: 100%;
 	}
 	input,
 	.login-btn {
