--- a/css/cart.css
+++ b/css/cart.css
@@ -34,18 +34,9 @@
     font-size: 30px;
 }
 
-.checkout_btn {
-    display: flex;
-    justify-content: flex-end;
-}
-
 .items {
     display: flex;
     justify-content: center;
-}
-
-.flex {
-    display: flex;
 }
 
 .list-group-item p {
@@ -67,7 +58,7 @@ body {
 .header.active {
 	box-shadow: 0px 4px 11px -1px rgba(0, 0, 0, 0.25);
 }
-.btn,
+.btn.btn-primary,
 .navbtn {
 	border-radius: 1000px;
 	border: 0px;
